// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeContext should render a ThemeDemo component with themed background color 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "padding": 8,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
        },
        undefined,
      ]
    }
  >
    BlueBase Light
  </Text>
</View>
`;

exports[`ThemeContext should render a overwritten ThemeDemo component with red background color 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
      "padding": 8,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#ffffff",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
        },
        undefined,
      ]
    }
  >
    BlueBase Dark
  </Text>
</View>
`;
